--- a/.config/nvim/coc-settings.json
+++ b/.config/nvim/coc-settings.json
@@ -14,14 +14,11 @@
       "trace.server": "verbose",
       "ignoredRootPaths": ["~"]
     },
-    "ccls": {
-      "command": "ccls",
+    "clangd": {
+      "command": "clangd",
       "filetypes": ["c", "cc", "cpp", "c++", "objc", "objcpp"],
       "trace.server": "verbose",
-      "rootPatterns": [".ccls", ".git/"],
-      "initializationOptions": {
-        "cache": {"directory": "/tmp/lsp_ccls"}
-      }
+      "rootPatterns": ["compile_flags.txt", "compile_commands.json"]
     },
     "python": {
       "command": "python",
