add latex related content

--- a/.config/nvim/coc-settings.json
+++ b/.config/nvim/coc-settings.json
@@ -51,6 +51,12 @@
           }
         }
       }
+    },
+    "latex": {
+      "command": "texlab",
+      "filetypes": ["tex", "bib", "plaintext", "context"],
+      "trace.server": "verbose",
+      "ignoredRootPaths": ["~"]
     }
   }
 }
